# scbot

./: .gitignore  CMakeLists.txt  README.md  ~package.xml
include/: pose_transformer.hpp  scbot_objects.hpp  simple_obstacle_detector.hpp  solar_panel_param_estimator.hpp
src/: detect_obstacle_from_pcap.cpp  handle_pcap.cpp  handle_pcap_old.cpp  pcap_to_bin.cpp  pose_transformer.cpp  simple_obstacle_detector.cpp  solar_panel_param_estimator.cpp  solar_panel_param_estimator_olc.cpp  test_main.cpp
tests/: CMakeLists.txt  test_pose_transformer.cpp
